k8s/frontend/frontend-deployment.yaml
# k8s/frontend/frontend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: mern-frontend

  template:
    metadata:
      labels:
        app: mern-frontend

    spec:
      containers:
        - name: frontend
          image: mern-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
