k8s/frontend/frontend-service.yaml
# k8s/frontend/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mern-frontend

spec:
  selector:
    app: mern-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
